# pulumi-unifi

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  0001-update.patch  Makefile  README.md  config.yaml  docker-compose.yaml  go.work  go.work.sum  mise.toml  update-all.sh  upgrade-sdk-provider.sh
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumiverse_unifi/: README.md  __init__.py  _inputs.py  _utilities.py  account.py  device.py  dynamic_dns.py  firewall_group.py  firewall_rule.py  get_account.py  get_ap_group.py  get_network.py  get_port_profile.py  get_radius_profile.py  get_user.py  get_user_group.py  network.py  outputs.py  port_forward.py  port_profile.py  provider.py  pulumi-plugin.json  radius_profile.py  setting_mgmt.py  setting_usg.py  site.py  static_route.py  user.py  user_group.py  wlan.py
sdk/python/pulumiverse_unifi/config/: __init__.pyi  vars.py
sdk/python/pulumiverse_unifi/dns/: __init__.py  get_record.py  get_records.py  outputs.py  record.py
sdk/python/pulumiverse_unifi/firewall/: __init__.py  _inputs.py  get_zone.py  group.py  outputs.py  rule.py  zone.py  zone_policy.py
sdk/python/pulumiverse_unifi/iam/: __init__.py  get_group.py  get_user.py  group.py  user.py
sdk/python/pulumiverse_unifi/port/: __init__.py  al_file.py  forward.py  get_profile.py  profile.py
sdk/python/pulumiverse_unifi/setting/: __init__.py  _inputs.py  auto_speedtest.py  country.py  dpi.py  guest_access.py  ips.py  lcd_monitor.py  locale.py  magic_site_to_site_vpn.py  mgmt.py  (+9 more)
(+534 files in other folders)
